Added loading of an html page as an example for how we'll load html pages vs .pug pages. registered controller

--- a/views/contactclone.html
+++ b/views/contactclone.html
@@ -30,7 +30,7 @@
                     <a href="/api">API Examples</a>
                 </li>
                 <li class="active">
-                    <a href="/contact">Contact</a>
+                    <a href="/contactclone">Contact</a>
                 </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
