--- a/views/newpoll.pug
+++ b/views/newpoll.pug
@@ -17,7 +17,7 @@ block content
     .form-group
       label(class='col-sm-2 control-label', for='option2') Option 2
       .col-sm-8
-        textarea.form-control(name='message', id='option2')
+        textarea.form-control(name='option2', id='option2')
     .form-group
       .col-sm-offset-2.col-sm-8
         button.btn.btn-primary(type='submit')
