--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -15,6 +15,8 @@
           a(href='/') Home
         li(class=(title == 'New Poll') ? 'active' : undefined)
           a(href='/newpoll') + New Poll
+        li(class=(title =='My Polls') ?  ' active' : undefined)
+          a(href='/account/mypolls') My Polls
         li(class=(title == 'Contact') ? 'active' : undefined)
           a(href='/contactclone') Contact
       ul.nav.navbar-nav.navbar-right
