--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -18,7 +18,7 @@
         li(class=(title =='My Polls') ?  ' active' : undefined)
           a(href='/account/mypolls') My Polls
         li(class=(title == 'Contact') ? 'active' : undefined)
-          a(href='/contactclone') Contact
+          a(href='/contact') Contact
       ul.nav.navbar-nav.navbar-right
         if !user
           li(class=(title == 'Login') ? 'active' : undefined)
