--- a/views/layout.pug
+++ b/views/layout.pug
@@ -10,6 +10,7 @@ html
     link(rel='shortcut icon', href='/favicon.png')
     link(rel='stylesheet', href='/css/main.css')
 
+
   body
     include partials/header
 
@@ -22,6 +23,7 @@ html
     script(src='/js/lib/jquery-2.2.4.min.js')
     script(src='/js/lib/bootstrap.min.js')
     script(src='/js/main.js')
+    script(src="https://cdn.plot.ly/plotly-latest.min.js" type="text/javascript")
 
     // Google Analytics: change UA-XXXXX-X to be your site's ID
     script.
