in poll.js wrote function to return user ID specific polls, then made loop within main.js to create graphs, then in mypolls.pug output graphs

--- a/views/account/mypolls.pug
+++ b/views/account/mypolls.pug
@@ -3,6 +3,17 @@ extends ../layout
 block content
        .page-header
            h3 My Polls
+           div(id="myPolls")
+
+               script(type='text/javascript').
+                   var myPolls =!{JSON.stringify(myPollItems)}
+
+
+
+
+
+
+
 
 
 
