--- a/views/home.pug
+++ b/views/home.pug
@@ -13,15 +13,10 @@ block content
 
 
 
-
-
-
-
-
         //a.btn.btn-default(href='/', role='button') View more... »
 
     .col-sm-6
       h2 Top
-      p Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-      p
-        a.btn.btn-default(href='#', role='button') View more... »
+
+//div(id="recentPolls")   script(type='text/javascript'). var polls =!{JSON.stringify(pollItems)}
+
