Made My Polls page work.

--- a/views/account/mypolls.pug
+++ b/views/account/mypolls.pug
@@ -2,11 +2,12 @@ extends ../layout
 
 block content
        .page-header
-           h3 My Polls
+           h2 My Polls
            div(id="myPolls")
 
-               script(type='text/javascript').
-                   var myPolls = !{JSON.stringify(myPollItems)}
+
+           script(type='text/javascript').
+                   var myPolls =!{JSON.stringify(pollItems)};
 
 
 
