Removed 'top' column, removed some footer stuff.

--- a/views/home.pug
+++ b/views/home.pug
@@ -4,18 +4,12 @@ block content
   p.lead You ask, the world answers.
   hr
   .row
-    .col-sm-6
+    .col
       h2 Recent
         div(id="recentPolls")
 
         script(type='text/javascript').
           var polls =!{JSON.stringify(pollItems)}
 
-
-
-        //a.btn.btn-default(href='/', role='button') View more... »
-
-    .col-sm-6
-      h2 Top
 
 
